# evemu_Crucible

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .svn.ignore  CMakeLists.txt  ChangeLog  Dockerfile  Doxyfile  Makefile  Makefile.am  README  README.md  bootstrap  build.sh  changelog.txt  common.mk  config.h.cmake  config.h.in  configure.ac  docker-compose.yml  evedb.yaml  prime_db.sql  schema.sql  schema_dump.sql  status.php
common/: Base64.cpp  Base64.h  CachedObjectMgr.cpp  CachedObjectMgr.h  DestinyBinDump.cpp  DestinyBinDump.h  DestinyStructs.h  DirWalker.cpp  DirWalker.h  EVEDBUtils.cpp  EVEDBUtils.h  EVEMarshal.cpp  EVEMarshal.h  EVEMarshalOpcodes.h  EVEPktDispatch.cpp  EVEPktDispatch.h  EVEPresentation.cpp  EVEPresentation.h  EVETCPConnection.cpp  EVETCPConnection.h  EVETCPServer.cpp  EVETCPServer.h  EVEUnmarshal.cpp  EVEUnmarshal.h  EVEUtils.cpp  EVEUtils.h  EVEVersion.h  EVEZeroCompress.cpp  EVEZeroCompress.h  EVEmuRevision.h  GaMath.cpp  GaMath.h  GaPreReqs.h  GaTypes.cpp  GaTypes.h  Makefile.am  MarshalReferenceMap.h  MiscFunctions.cpp  MiscFunctions.h  Mutex.cpp  (+53 more)
common/sigexcept/: sigexcept.h  sigexcept_test.cpp  sym_engine.cpp  sym_engine.h
common/tables/: invCategories.h  invGroups.h  make_all.sh  make_table.sh
common/tinyxml/: tinyxml.h  tinyxmlparser.cpp
dep/: CMakeLists.txt  Makefile.am
dep/OdbCmake/: .source  CMakeLists.txt  LICENSE  README  driver.cpp
dep/asio/: CMakeLists.txt
dep/boost/: CMakeLists.txt  Jamroot  boostcpp.jam  index.html
dep/gangsta/: CMakeLists.txt  GaMath.cpp  GaMath.h  GaPreReqs.h  GaTypes.cpp  GaTypes.h  Makefile.am
dep/lua/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
dep/tinyxml/: CMakeLists.txt  Makefile.am
dep/utf8cpp/: CMakeLists.txt  Makefile.am  utf8-checked.h  utf8-core.h  utf8-unchecked.h  utf8.h
dep/utils/: Base64.cpp  CMakeLists.txt  Makefile.am
dep/zlib/: CMakeLists.txt  zlib.lib
dep/zlib-1.2.7/: CMakeLists.txt
doc/: CMakeLists.txt  ChangeLog  ChangeLog.md  Doxyfile.cmake  Doxyfile.in  EvEmu_Class_Descriptions.txt  sql_queries  valgrind
doc/code_and_design_notes/: Alasiya_TODO  Process-call_layout  classes_by_itemID  coding_rules  command_list  data_race_under_valgrind-NEW!!  effectProcessing_data  eve_python_xmlp_tags  readme  undock_setstate_timing  var_types
doc/tutorials/: GetTutorials  tutorialIDs  tutorial_context_help  tutorial_load
evetool/: .depend  Makefile  Makefile.am  Makefile.common  Makefile.darwin  TriFile.cpp  TriFile.h  main.cpp  stuff_extract.cpp
packets/: .svn.ignore  AccountPkts.cpp  AccountPkts.h  AccountPkts.xmlp  Authentication.cpp  Authentication.xmlp  Character.cpp  Character.h  Character.xmlp  CorporationPkts.cpp  CorporationPkts.h  Crypto.cpp  Crypto.h  Crypto.xmlp  Destiny.cpp  Destiny.h  Destiny.xmlp  DogmaIM.cpp  DogmaIM.h  DogmaIM.xmlp  General.cpp  General.h  General.xmlp  Inventory.cpp  Inventory.h  Inventory.xmlp  LSCPkts.cpp  LSCPkts.h  LSCPkts.xmlp  Language.cpp  Language.h  Makefile.am  Manufacturing.cpp  Manufacturing.h  Manufacturing.xmlp  Market.cpp  Market.h  Market.xmlp  Missions.cpp  Missions.h  (+13 more)
server/: .depend  BookmarkService.cpp  Client.cpp  Client.cpp.orig  Client.h  ClientSession.cpp  ClientSession.h  ClientSession_fields.h  EVEmuServerConfig.cpp  EVEmuServerConfig.h  EVEmuServerConfig_elements.h  EntityList.cpp  EntityList.h  EvemuPCH.h  Makefile  Makefile.am  Makefile.common  Makefile.darwin  NPC.cpp  NPC.h  NetService.cpp  NetService.h  PyBoundObject.cpp  PyBoundObject.h  PyCallable.cpp  PyCallable.h  PyService.cpp  PyService.h  PyServiceCD.h  PyServiceMgr.cpp  PyServiceMgr.h  ServiceDB.cpp  ServiceDB.cpp.orig  ServiceDB.h  main.cpp
server/account/: AccountDB.cpp  AccountDB.h  AccountService.cpp  AccountService.h  AuthService.cpp  AuthService.h  ClientStatMgrService.h
server/admin/: AlertService.cpp  AlertService.h  AllCommands.cpp  AllCommands.h  CommandDB.cpp  CommandDB.h  CommandDispatcher.cpp  CommandDispatcher.h  GMCommands.cpp  GMCommands.cpp.orig  GMCommands.h  GMCommands.h.orig  PetitionerService.cpp  PetitionerService.h  SlashService.cpp  SlashService.h
server/cache/: CachableList.h  ObjCacheDB.cpp  ObjCacheDB.h  ObjCacheService.cpp  ObjCacheService.h
server/character/: CertificateMgrDB.cpp  CertificateMgrDB.h  CertificateMgrService.cpp  CertificateMgrService.h  CharMgrService.cpp  CharMgrService.h  CharacterAppearance_fields.h  CharacterDB.cpp  CharacterDB.h  CharacterService.cpp  CharacterService.cpp.orig  CharacterService.h  SkillMgrService.cpp  SkillMgrService.h
server/chat/: LSCChannel.cpp  LSCChannel.h  LSCDB.cpp  LSCDB.h  LSCService.cpp  LSCService.h  LookupService.cpp  LookupService.h  OnlineStatusService.cpp  OnlineStatusService.h  VoiceMgrService.cpp  VoiceMgrService.h
server/config/: ConfigDB.cpp  ConfigDB.h  ConfigService.cpp  ConfigService.h  LanguageService.cpp  LanguageService.h
server/corporation/: CorpMgrService.cpp  CorpMgrService.h  CorpRegistryService.cpp  CorpRegistryService.h  CorpStationMgrService.cpp  CorpStationMgrService.h  CorporationCarrier.h  CorporationDB.cpp  CorporationDB.h  CorporationService.cpp  CorporationService.h
server/dogmaim/: DogmaIMDB.cpp  DogmaIMDB.h  DogmaIMService.cpp  DogmaIMService.h
server/inventory/: AttributeMgr.h  EVEAttributeMgr.cpp  EVEAttributeMgr.h  EVEAttributes.h  InvBrokerService.cpp  InvBrokerService.cpp.orig  InvBrokerService.h  InventoryBound.cpp  InventoryBound.h  InventoryDB.cpp  InventoryDB.h  InventoryItem.cpp  InventoryItem.cpp.orig  InventoryItem.h  ItemDB.cpp  ItemDB.h  ItemFactory.cpp  ItemFactory.h  Type.cpp  Type.h
server/manufacturing/: FactoryDB.cpp  FactoryDB.h  FactoryService.cpp  FactoryService.h  (+4 more)
xmlpktgen/: .depend  .svn.ignore  CloneGenerator.cpp  CloneGenerator.h  ConstructGenerator.cpp  ConstructGenerator.h  DecodeGenerator.cpp  DestructGenerator.cpp  DestructGenerator.h  DumpGenerator.cpp  EncodeGenerator.cpp  Generator.cpp  Generator.h  HeaderGenerator.cpp  HeaderGenerator.h  ImplGenerator.cpp  Makefile  Makefile.am  Makefile.common  Makefile.darwin  XMLPacketGen.cpp  XMLPacketGen.h  main.cpp  xmlpktgen
(+3532 files in other folders)
