INCLUDES += -I$(srcdir)/../3rdparty/ -I$(srcdir)/../server/

noinst_LIBRARIES = \
	libcommon.a

libcommon_a_SOURCES = \
	logsys.cpp \
	PyRep.cpp \
	logtypes.h \
	types.h \
	common.h \
	misc.h \
	logsys.h \
	Base64.cpp \
	Base64.h \
	common.h \
	counted_ptr.h \
	crc32.cpp \
	crc32.h \
	dbcore.cpp \
	dbcore.h \
	CachedObjectMgr.cpp \
	CachedObjectMgr.h \
	DestinyBinDump.cpp \
	DestinyBinDump.h \
	DestinyStructs.h \
	DirWalker.cpp \
	DirWalker.h \
	EVEDBUtils.cpp \
	EVEDBUtils.h \
	EVEMarshal.cpp \
	EVEMarshal.h \
	EVEMarshalOpcodes.h \
	EVEmuRevision.h \
	EVEPktDispatch.cpp \
	EVEPktDispatch.h \
	EVEPresentation.cpp \
	EVEPresentation.h \
	EVETCPConnection.cpp \
	EVETCPConnection.h \
	EVETCPServer.cpp \
	EVETCPServer.h \
	EVEUnmarshal.cpp \
	EVEUnmarshal.h \
	EVEUtils.cpp \
	EVEUtils.h \
	EVEVersion.h \
	EVEZeroCompress.cpp \
	EVEZeroCompress.h \
	GaMath.cpp \
	GaMath.h \
	GaPreReqs.h \
	GaTypes.cpp \
	GaTypes.h \
	gpoint.cpp \
	gpoint.h \
	misc.cpp \
	MiscFunctions.cpp \
	MiscFunctions.h \
	misc.h \
	Mutex.cpp \
	Mutex.h \
	packet_dump.cpp \
	packet_dump.h \
	packet_functions.cpp \
	packet_functions.h \
	packet_types.h \
	PyDumpVisitor.cpp \
	PyDumpVisitor.h \
	PyLookupDump.cpp \
	PyLookupDump.h \
	PyPacket.cpp \
	PyPacket.h \
	PyRep.cpp \
	PyRep.h \
	PyUtils.cpp \
	PyUtils.h \
	PyVisitor.cpp \
	PyVisitor.h \
	PyXMLGenerator.cpp \
	PyXMLGenerator.h \
	queue.h \
	RowsetReader.cpp \
	RowsetReader.h \
	RowsetToSQL.h \
	seperator.h \
	StreamPacketizer.cpp \
	StreamPacketizer.h \
	TCPBasicServer.h \
	TCPConnection.cpp \
	TCPConnection.h \
	TCPServer.cpp \
	TCPServer.h \
	timer.cpp \
	timer.h \
	unix.cpp \
	unix.h \
	XMLParser.cpp \
	XMLParser.h

